@@ -1,6 +1,14 @@
 2005-10-14  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-window.c: (window_populate_find),
+	(window_find_entry_activate_cb),
+	(window_find_entry_key_pressed_cb):
+	- Allow Enter to find next, based on patch from Jorge Bernal, fixes
+	#167420
+
+2005-10-14  Brent Smith  <gnome@nextreality.net>
+
+	* src/yelp-window.c: (window_populate_find),
 	(window_find_entry_key_pressed_cb),
 	(window_find_buttons_set_sensitive):
 	- Allow Esc to close find bar, based on patch from Jorge Bernal,
